# stadusted

./: .gitignore  AGENTS.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  OTTO_GUIDE.md  PROMPT_build.md  README.md  extension.gdextension  extension.gdextension.uid  icon.svg.import  otto.sh  project.godot
addons/godot_falling_sand/: extension.gdextension  extension.gdextension.uid  libgodot_falling_sand.dylib
shaders/: grid_render.gdshader  grid_render.gdshader.uid  particle_effect.gdshader  particle_effect.gdshader.uid
specs/: ACCEPTANCE_CRITERIA.md  GDEXTENSION_SPEC.md  STARDUST_ACCEPTANCE_CRITERIA.md  STARDUST_SPEC.md
src/: BlackHoleEngine.cpp  BlackHoleEngine.h  FallingSandEngine.cpp  FallingSandEngine.h
src/godot_extension/: FallingSandSimulation.cpp  FallingSandSimulation.h  GridRenderer.cpp  GridRenderer.h  register_types.cpp
tests/: TestRunner.gd  TestRunner.gd.uid  TestRunner.tscn
